--- a/benwaonline/templates/login.html
+++ b/benwaonline/templates/login.html
@@ -2,7 +2,7 @@
 {% block body %}
   <h2>Login to Benwa <i>Online</i></h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
+  <form action="{{ url_for('benwaonline.login') }}" method=post>
     <dl>
       <dt>Username:
       <dd><input type=text name=username>
