--- a/benwaonline/guestbook/templates/guestbook.html
+++ b/benwaonline/guestbook/templates/guestbook.html
@@ -13,10 +13,10 @@
   </br>
   <h1>write your own comment here!!</h1>
 
-  <form action="{{ url_for('benwaonline.add_guestbook_entry') }}" method=post class=add-guestbook-entry>
+  <form action="{{ url_for('.add_guestbook_entry') }}" method=post class=add-guestbook-entry>
     <label for="name">Name:</label>
     <input type="text" name="name" id="name" value="{{ name }}"></br>
-    <textarea name=content rows=5 cols=40 placeholder="write your comment here!!"></textarea><br>
+    <textarea name=comment rows=5 cols=40 placeholder="write your comment here!!"></textarea><br>
     <input type=submit value='Share your precious benwa meories'>
   </form>
 
