Reworking the gallery * Main view will show a thumbnail of every benwa * From there you have a fullsize benwa with ability to travel to the next/previous benwa and you can even leave a comment on the benwa

--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -2,17 +2,11 @@
 {% block body %}
 why
     <div class="columwrapper">
-    <table>
-        {% for column in pics|slice(10) %}
-        <tr>
-        {# <ul class="column-{{ loop.index }}"> --> #}
-            {% for item in column %}
-            <td> <img src = "{{ url_for('gallery.static', filename=item.filename) }}"> </td>
-            {% endfor %}
-        </tr>
-          {#  </ul> #}
-        {% endfor %}
-    </table>
+    {% for benwa in benwas %}
+        <a href="{{ url_for('gallery.rotating', page=loop.index) }}">
+            <img src = "{{ url_for('gallery.static', filename=benwa.pic().filename) }}">
+        </a>
+    {% endfor %}
     </div>
 
 {% endblock %}
