--- a/benwaonline/gallery/templates/rotating.html
+++ b/benwaonline/gallery/templates/rotating.html
@@ -1,20 +1,35 @@
 {% extends "layout.html" %}
 {% block body %}
-    {% for pic in pics.items %}
-        <img src = "{{ url_for('gallery.static', filename=pic.filename) }}">
+    {% for pic in benwas.items %}
+        {% if benwas.has_next %}
+        <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">
+            <img src = "{{ url_for('gallery.static', filename=pic.pic().filename) }}"></a>
+        {% else %}
+            <img src = "{{ url_for('gallery.static', filename=pic.pic().filename) }}">
+        {% endif %}
     {% endfor %}
+
     <br>
-    {% if pics.has_prev %}
-        <a href="{{ url_for('gallery.rotating', page=pics.prev_num) }}">Previous Benwa</a>
+    {% if benwas.has_prev %}
+        <a href="{{ url_for('gallery.rotating', page=benwas.prev_num) }}">Previous Benwa</a>
     {% else %}
         Previous Benwa
     {% endif %}
 
-    {% if pics.has_next %}
-        <a href="{{ url_for('gallery.rotating', page=pics.next_num) }}">Next Benwa</a>
+    {% if benwas.has_next %}
+        <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">Next Benwa</a>
     {% else %}
         Next Benwa
     {% endif %}
     <br>
+
+    <h1>write your own comment here!!</h1>
+
+    {% include "_comment_form.html" %}
+
+    </br>
+
+    <h2>Here what others have to say about these loveableb enwas!</h2>
+    {% include "_display_comments.html" %}
 
 {% endblock %}
