cleaned up html

--- a/benwaonline/gallery/templates/rotating.html
+++ b/benwaonline/gallery/templates/rotating.html
@@ -1,35 +1,39 @@
 {% extends "layout.html" %}
 {% block body %}
-    {% for pic in benwas.items %}
-        {% if benwas.has_next %}
-        <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">
-            <img src = "{{ url_for('gallery.static', filename=pic.pic().filename) }}"></a>
-        {% else %}
-            <img src = "{{ url_for('gallery.static', filename=pic.pic().filename) }}">
-        {% endif %}
-    {% endfor %}
-
+    <div class="picture">
+        {% for pic in benwas.items %}
+            {% if benwas.has_next %}
+            <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">
+                <img src = "{{ url_for('static', filename=pic.pic().filename) }}"></a>
+            {% else %}
+                <img src = "{{ url_for('static', filename=pic.pic().filename) }}">
+            {% endif %}
+        {% endfor %}
+    </div>
     <br>
-    {% if benwas.has_prev %}
+    <div class="links">
+        {% if benwas.has_prev %}
         <a href="{{ url_for('gallery.rotating', page=benwas.prev_num) }}">Previous Benwa</a>
-    {% else %}
-        Previous Benwa
-    {% endif %}
+        {% else %}
+            Previous Benwa
+        {% endif %}
 
-    {% if benwas.has_next %}
-        <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">Next Benwa</a>
-    {% else %}
-        Next Benwa
-    {% endif %}
+        {% if benwas.has_next %}
+            <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">Next Benwa</a>
+        {% else %}
+            Next Benwa
+        {% endif %}
+    </div>
     <br>
+    <div class="comments">
+        <h1>write your own comment here!!</h1>
 
-    <h1>write your own comment here!!</h1>
+        {% include "_comment_form.html" %}
 
-    {% include "_comment_form.html" %}
+        </br>
 
-    </br>
-
-    <h2>Here what others have to say about these loveableb enwas!</h2>
-    {% include "_display_comments.html" %}
+        <h2>Here what others have to say about these loveableb enwas!</h2>
+        {% include "_display_comments.html" %}
+    </div>
 
 {% endblock %}
