--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -1,12 +1,12 @@
-{% extends "layout.html" %}
-{% block body %}
-why
-    <div class="columwrapper">
-    {% for benwa in benwas %}
-        <a href="{{ url_for('gallery.rotating', page=loop.index) }}">
-            <img src = "{{ url_for('gallery.static', filename=benwa.pic().filename) }}">
-        </a>
-    {% endfor %}
-    </div>
+<link rel=stylesheet media="screen" type=text/css href="{{ url_for('gallery.static', filename='gallery.css') }}">
 
-{% endblock %}
+<br>
+{% for benwa in benwas %}
+<span class="thumb">
+<a href="{{ url_for('gallery.rotating', page=loop.index) }}">
+    <img src = "{{ url_for('static', filename=benwa.pic().thumbnail) }}">
+</a>
+</span>
+
+{% endfor %}
+
