--- a/benwaonline/gallery/templates/rotating.html
+++ b/benwaonline/gallery/templates/rotating.html
@@ -1,26 +1,26 @@
 {% extends "layout.html" %}
 {% block body %}
     <div class="picture">
-        {% for pic in benwas.items %}
+        {% for benwa in benwas.items %}
             {% if benwas.has_next %}
-            <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">
-                <img src = "{{ url_for('static', filename=pic.pic().filename) }}"></a>
+            <a href="{{ url_for('gallery.rotating', page=benwas.next_num, pool=pool.name) }}">
+                <img src = "{{ url_for('static', filename=benwa.pic().filename) }}"></a>
             {% else %}
-                <img src = "{{ url_for('static', filename=pic.pic().filename) }}">
+                <img src = "{{ url_for('static', filename=benwa.pic().filename) }}">
             {% endif %}
         {% endfor %}
     </div>
     <br>
     <div class="links">
         {% if benwas.has_prev %}
-        <a href="{{ url_for('gallery.rotating', page=benwas.prev_num) }}">Previous Benwa</a>
+        <a href="{{ url_for('gallery.rotating', page=benwas.prev_num, pool=pool.name) }}">Previous Benwa</a>
         {% else %} Previous Benwa {% endif %}
         |
         {% if benwas.has_next %}
-        <a href="{{ url_for('gallery.rotating', page=benwas.next_num) }}">Next Benwa</a>
+        <a href="{{ url_for('gallery.rotating', page=benwas.next_num, pool=pool.name) }}">Next Benwa</a>
         {% else %} Next Benwa {% endif %}
     <br>
-    <a href="{{ url_for('gallery.display_benwas') }}">galery</a>
+    <a href="{{ url_for('gallery.display_benwas', pool=pool.name) }}">galery</a>
     <br>
     </div>
 
