--- a/benwaonline/gallery/templates/_display_comments.html
+++ b/benwaonline/gallery/templates/_display_comments.html
@@ -1,6 +1,8 @@
 <ul class=comments>
     {% for benwa in benwas.items %}
+        yes
         {% for entry in benwa.guestbook() %}
+        ok
             <li><h2>{{ entry.name }} posted on {{ entry.date_posted }}</h2></li>
             {{ entry.content|safe }}
         {% endfor %}
