Massive overhaul of database schema

--- a/benwaonline/gallery/templates/_display_comments.html
+++ b/benwaonline/gallery/templates/_display_comments.html
@@ -1,10 +1,8 @@
 <ul class=comments>
-    {% for benwa in benwas.items %}
-        yes
-        {% for entry in benwa.guestbook() %}
-        ok
-            <li><h2>{{ entry.name }} posted on {{ entry.date_posted }}</h2></li>
-            {{ entry.content|safe }}
+    {% for post in posts.items %}
+        {% for comment in post.comments %}
+            <li><h2>{{ comment.poster_name }} posted on {{ comment.created }}</h2></li>
+            {{ comment.content|safe }}
         {% endfor %}
     {% endfor %}
 </ul>
