--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -1,10 +1,10 @@
 <link rel=stylesheet media="screen" type=text/css href="{{ url_for('gallery.static', filename='gallery.css') }}">
 
 <br>
-{% for benwa in benwas %}
+{% for post in posts %}
 <span class="thumb">
-<a href="{{ url_for('gallery.rotating', page=loop.index, pool=pool.name) }}">
-    <img src = "{{ url_for('static', filename=benwa.pic().thumbnail) }}">
+<a href="{{ url_for('gallery.rotating', page=loop.index, tag=tag) }}">
+    <img src = "{{ url_for('static', filename=post.preview.filepath) }}">
 </a>
 </span>
 
