Implemented a 'show' page to view a single benwa, will eventually replace 'rotating'

--- a/benwaonline/gallery/templates/_comment_form.html
+++ b/benwaonline/gallery/templates/_comment_form.html
@@ -1,4 +1,4 @@
-<form action="{{ url_for('gallery.add_comment', page=posts.page, tag=tag, post_id=posts.items[0].id )}}" method=post>
+<form action="{{ url_for('gallery.add_comment', post_id=post.id )}}" method=post>
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" value="{{ name }}"></br>
         <textarea name=content rows=5 cols=40 placeholder="write your comment here!!"></textarea><br>
