--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -3,7 +3,8 @@
 <br>
 {% for post in posts %}
 <span class="thumb">
-<a href="{{ url_for('gallery.rotating', page=loop.index, tag=tag) }}">
+{# <a href="{{ url_for('gallery.rotating', page=loop.index, tags=tags) }}"> #}
+    <a href="{{ url_for('gallery.show_post', post_id=post.id) }}">
     <img src = "{{ url_for('static', filename=post.preview.filepath) }}">
 </a>
 </span>
