--- a/benwaonline/gallery/static/gallery_layout.css
+++ b/benwaonline/gallery/static/gallery_layout.css
@@ -12,17 +12,22 @@ span.thumb img{
 	margin-right:auto;
 }
 
-section.side_by_side {
-    /* width: 80%; */
-    margin: auto;
-    padding: 10px;
+.tags {
+	width: 175px;
+    position: fixed;
+    height: 100%;
 }
 
-div#left {
-    width: 15%;
+.maincontainer {
+    width: calc(100% - 175px);
+    left: 175px;
+    height: calc(100% + 50px);
     float: left;
+    position: relative;
 }
 
-div#right {
-    margin-left: 15%;
+ul.tags {
+	list-style-type: none;
+	margin: 0;
+    padding: 0;
 }
