--- a/benwaonline/gallery/templates/_macros.html
+++ b/benwaonline/gallery/templates/_macros.html
@@ -17,9 +17,11 @@
 {% endmacro %}
 
 {% macro display_tags(tags) %}
+<ul class="tags">
 {% for tag in tags %}
 <li><a href="{{ url_for('gallery.display_posts', tags=tag.name) }}">{{ tag.name }}</a> {{tag.posts|count}}</li>
 {% endfor %}
+</ul>
 {% endmacro %}
 
 {% macro display_all_posts(posts) %}
