--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -1,12 +1,11 @@
-<link rel=stylesheet media="screen" type=text/css href="{{ url_for('gallery.static', filename='gallery.css') }}">
+{% import '_macros.html' as macros %}
+{% extends "gallery_layout.html" %}
 
-<br>
-{% for benwa in benwas %}
-<span class="thumb">
-<a href="{{ url_for('gallery.rotating', page=loop.index) }}">
-    <img src = "{{ url_for('static', filename=benwa.pic().thumbnail) }}">
-</a>
-</span>
-
-{% endfor %}
+{% block tags %}
+all benwa tags
+{{ macros.display_tags(tags)}}
+{% endblock %}
+{% block maincontainer %}
+{{ macros.display_all_posts(posts)}}
+{% endblock %}
 
