Moved some static files Included some logged in functionality

--- a/benwaonline/gallery/templates/gallery_layout.html
+++ b/benwaonline/gallery/templates/gallery_layout.html
@@ -1,4 +1,4 @@
-<link rel=stylesheet media="screen" type=text/css href="{{ url_for('gallery.static', filename='gallery_layout.css') }}">
+<link rel=stylesheet media="screen" type=text/css href="{{ url_for('static', filename='gallery_layout.css') }}">
 {% extends "layout.html" %}
 {% block body %}
 <div class="tags">{% block tags %}{% endblock %}</div>
