--- a/benwaonline/templates/security/login_user.html
+++ b/benwaonline/templates/security/login_user.html
@@ -1,3 +1,4 @@
-  <h2>Login to Benwa <i>Online</i></h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <a href="{{ url_for('benwaonline.auth') }}"><img src="{{ url_for('static', filename='sign-in-with-twitter-gray.png') }}" alt=""></a>
+{% extends 'admin/master.html' %}
+<h2>Login to Benwa <i>Online</i></h2>
+{% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
+<a href="{{ url_for('benwaonline.auth') }}"><img src="{{ url_for('static', filename='sign-in-with-twitter-gray.png') }}" alt=""></a>
