--- a/benwaonline/templates/signup.html
+++ b/benwaonline/templates/signup.html
@@ -1,3 +1,13 @@
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+  <ul class=flashes>
+  {% for message in messages %}
+    <li>{{ message }}</li>
+  {% endfor %}
+  </ul>
+{% endif %}
+{% endwith %}
+
 <form action="" method="post" name="RegistrationForm">
     <p>
         {{ form.adj() }} {{ form.benwa() }} {{ form.pos() }}
