--- a/benwaonline/gallery/templates/_macros.html
+++ b/benwaonline/gallery/templates/_macros.html
@@ -19,7 +19,7 @@
 {% macro display_tags(tags) %}
 <ul class="tags">
 {% for tag in tags %}
-<li><a href="{{ url_for('gallery.display_posts', tags=tag.name) }}">{{ tag.name }}</a> {{tag.posts|count}}</li>
+<li><a href="{{ url_for('gallery.show_posts', tags=tag.name) }}">{{ tag.name }}</a> {{tag.posts|count}}</li>
 {% endfor %}
 </ul>
 {% endmacro %}
@@ -28,7 +28,7 @@
 {% for post in posts %}
 <span class="thumb">
     <a href="{{ url_for('gallery.show_post', post_id=post.id) }}">
-        <img src = "{{ url_for('static', filename=post.preview.filepath) }}"></a>
+        <img src = "{{ url_for('static', filename=post.image.preview.filepath) }}"></a>
 </span>
 {% endfor %}
 {% endmacro %}
@@ -41,7 +41,8 @@
 {% endmacro %}
 
 {% macro post_nav(post) %}
-<a href="{{ url_for('gallery.show_previous_post', post_id=post.id)  }}">Previous</a>
-|
-<a href="{{ url_for('gallery.show_next_post', post_id=post.id)  }}">Next</a>
+{% if post.has_prev %}<a href="{{ url_for('gallery.show_post', post_id=post.prev_num)  }}">Previous</a>
+{% else %} Previous {% endif %} |
+{% if post.has_next %}<a href="{{ url_for('gallery.show_post', post_id=post.next_num)  }}">Next</a>
+{% else %} Next {% endif %}
 {% endmacro %}
