--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -4,7 +4,7 @@
 <div class=page>
 <div id="top">
 <h1 class='left'>Benwa <i>Online</i></h1>
-<a href="{{ url_for('benwaonline.auth') }}" class='right'><img src="{{ url_for('static', filename='sign-in-with-twitter-gray.png') }}" alt=""></a>
+<a href="{{ url_for('auth.oauthorize') }}" class='right'><img src="{{ url_for('static', filename='sign-in-with-twitter-gray.png') }}" alt=""></a>
 </div style="clear: both;"></div>
 </div>
 <br>
