--- a/benwaonline/gallery/templates/show.html
+++ b/benwaonline/gallery/templates/show.html
@@ -2,7 +2,7 @@
 {% extends "gallery_layout.html" %}
 {% block tags %}
 this benwa tags
-{{ macros.display_tags(post.items[0]) }}
+{{ macros.display_tags(post.items[0].tags) }}
 {% endblock %}
 {% block maincontainer %}
 <h3>{{ post.items[0].title }}</h3>
