Post adding functionality! Requires testings!

--- a/benwaonline/gallery/templates/image_upload.html
+++ b/benwaonline/gallery/templates/image_upload.html
@@ -7,9 +7,11 @@ all benwa tags
 {% endblock %}
 {% block maincontainer %}
 <form method="post" enctype=multipart/form-data action="{{ url_for('gallery.add_post') }}">
+    {{ form.csrf_token }}
     {{ form.image() }}
     <br>
     {{ form.tags() }}
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
 
