Battled against flask-security's dominance of /login (didnt win)

--- a/benwaonline/auth/templates/login.html
+++ b/benwaonline/auth/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
-You need to be si
-{{ url }}
+Big long text block about what infomation is stored<br>
+and stuff
 {% with messages = get_flashed_messages() %}
 {% if messages %}
   <ul class=flashes>
