--- a/benwaonline/auth/templates/signup.html
+++ b/benwaonline/auth/templates/signup.html
@@ -3,9 +3,9 @@
 <form action="" method="POST" name="RegistrationForm">
     {{ form.csrf_token }}
     <p>
-        {{ form.adjective() }}
-        {{ form.benwa() }}
-        {{ form.noun() }}
+        {{ form.adjective }}
+        {{ form.benwa }}
+        {{ form.noun }}
     </p>
     <input type="submit" value="Submit">
 </form>
