--- a/benwaonline/user/templates/users.html
+++ b/benwaonline/user/templates/users.html
@@ -4,6 +4,7 @@
         <td>{{ user.username }}</td>
         <td>{{ user.comments.all()|count }}</td>
         <td>no</td>
+        <td>{{ user.role }}</td>
     </tr>
     {% endfor %}
 {% endmacro %}
@@ -23,6 +24,7 @@
             <td>Username</td>
             <td>Comments</td>
             <td>Benwa?</td>
+            <td>Roles</td>
         </tr>
         {{ display_users(users) }}
     </thead>
