--- a/benwaonline/gallery/templates/_macros.html
+++ b/benwaonline/gallery/templates/_macros.html
@@ -1,7 +1,7 @@
 {% macro display_comments(post) %}
 <ul class=comments>
 {% for comment in post.comments | reverse %}
-    <li>{{ comment.user.username }} posted comment # {{ comment.id }} on {{ comment.created }} {{ display_delete_comment(comment) }}</li>
+    <li>{{ comment.user.username }} posted comment # {{ comment.id }} on {{ comment.created }} {{ display_delete_comment(comment, post) }}</li>
     {{ comment.content|safe }}
 {% endfor %}
 </ul>
@@ -15,7 +15,7 @@
 </form>
 {% endmacro %}
 
-{% macro display_delete_comment(comment) %}
+{% macro display_delete_comment(comment, post) %}
 {% if g.user.is_authenticated and comment.owner(g.user) %}<a href="{{ url_for('gallery.delete_comment', post_id=post.id, comment_id=comment.id) }}">X</a>{% endif %}
 {% endmacro %}
 
