Actually factually fixed redirect after trying to pick a username that already exists

--- a/benwaonline/auth/templates/signup.html
+++ b/benwaonline/auth/templates/signup.html
@@ -1,5 +1,14 @@
 {% extends "layout.html" %}
 {% block body %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+  <ul class=flashes>
+  {% for message in messages %}
+    <li>{{ message }}</li>
+  {% endfor %}
+  </ul>
+{% endif %}
+{% endwith %}
 <form action="" method="POST" name="RegistrationForm">
     {{ form.csrf_token }}
     <p>
