--- a/benwaonline/gallery/templates/show.html
+++ b/benwaonline/gallery/templates/show.html
@@ -2,19 +2,19 @@
 {% extends "gallery_layout.html" %}
 {% block tags %}
 this benwa tags
-{{ macros.display_tags(post.items[0].tags) }}
+{{ macros.display_tags(post.tags) }}
 {% endblock %}
 {% block maincontainer %}
-<h3>{{ post.items[0].title }}</h3>
-<img src = "{{ url_for('static', filename=post.items[0].image.filepath) }}">
+<h3>{{ post.title }}</h3>
+<img src = "{{ url_for('static', filename=post.image.filepath) }}">
 <br>
-{{ macros.post_nav(post) }}
+{# {{ macros.post_nav(post) }} #}
 <br>
 {% if current_user.is_authenticated %}
 <h1>write your own comment here!!</h1>
-{{ macros.add_comment(post.items[0], form) }}
+{{ macros.add_comment(post, form) }}
 {% endif %}
 </br>
 <h2>Here what others have to say about these loveableb enwas!</h2>
-{{ macros.display_comments(post.items[0]) }}
+{{ macros.display_comments(post) }}
 {% endblock %}
