--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -62,3 +62,8 @@ ul.tags {
 .users td { padding:2px 10px; }
 .users-odd	{ background-color:transparent; }
 .users-odd td	{ border-top:none; border-bottom:none; }
+
+
+td.label {
+	vertical-align: top;
+}
