--- a/benwaonline/gallery/templates/_macros.html
+++ b/benwaonline/gallery/templates/_macros.html
@@ -16,7 +16,7 @@
 {% endmacro %}
 
 {% macro display_delete_comment(comment, post) %}
-{% if g.user.is_authenticated and comment.owner %}<a href="{{ url_for('gallery.delete_comment', post_id=post.id, comment_id=comment.id) }}">X</a>{% endif %}
+{% if g.user.is_authenticated and comment.id|string() in g.user.comments %}<a href="{{ url_for('gallery.delete_comment', post_id=post.id, comment_id=comment.id) }}">X</a>{% endif %}
 {% endmacro %}
 
 {% macro display_tags(tags) %}
