--- a/benwaonline/gallery/templates/show.html
+++ b/benwaonline/gallery/templates/show.html
@@ -16,5 +16,5 @@ this benwa tags
 {% endif %}
 </br>
 <h2>Here what others have to say about these loveableb enwas!</h2>
-{{ macros.display_comments(post) }}
+{{ macros.display_comments(post.comments) }}
 {% endblock %}
