Rewrote auth0 provider, made changes to reflect that (tests dont work)

--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -17,7 +17,7 @@
 <a href="{{ url_for('gallery.add_post') }}" method="post">add a benwa</a>
 <a href="{{ url_for('authbp.logout') }}">logout</a>
 {% else %}
-<a href="{{ url_for('authbp.oauthorize') }}">login/signup</a>
+<a href="{{ url_for('authbp.authorize') }}">login/signup</a>
 {% endif %}
 </div>
 </div style="clear: both;"></div>
