--- a/benwaonline/auth/templates/login.html
+++ b/benwaonline/auth/templates/login.html
@@ -11,7 +11,7 @@ and stuff
   </ul>
 {% endif %}
 {% endwith %}
-<form action="{{ url_for('auth.oauthorize') }}" method="post">
+<form action="{{ url_for('auth.authorize') }}" method="post">
 <input type="image" src="{{ url_for('static', filename='sign-in-with-twitter-gray.png') }}" alt="Login with Twitter" />
 </form>
 {% endblock %}
