--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -54,6 +54,23 @@ ul.tags {
     padding: 0;
 }
 
+ul.navbar {
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+li.navbar_entry {
+	float: left;
+}
+
+li.navbar_entry a {
+	display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 .users { border-radius:8px; }
 .users th { padding: 2px 10px; }
 .users tr:last-child td{ border-bottom:0; }
