--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -2,27 +2,18 @@
 <title>Benwa Online</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-<h1 class='left'>Benwa <i>Online</i></h1>
-<table class=left>
-    <tr>
-        <td></td>
-        <td><a href="{{ url_for('gallery.show_posts') }}" method="post">benwas</a></td>
-        <td><a href="{{ url_for('userinfo.show_users') }}" method="post">benwusers</a></td>
-    </tr>
-</table>
-
-<div class='right'>
-{% if current_user.is_authenticated %}
-<span>{{ current_user.username }}</span>
-<a href="{{ url_for('gallery.add_post') }}" method="post">add a benwa</a>
-<a href="{{ url_for('authbp.logout') }}">logout</a>
-{% else %}
-<a href="{{ url_for('authbp.authorize') }}">login/signup</a>
-{% endif %}
-</div>
-</div style="clear: both;"></div>
-</div>
-<br>
-<br>
+<ul class='navbar'>
+    <li class='navbar_entry'><h1>Benwa <i>Online</i></h1></li>
+    <li class='navbar_entry'><a href="{{ url_for('gallery.show_posts') }}">benwas</a></li>
+    <li class='navbar_entry'><a href="{{ url_for('userinfo.show_users') }}">benwusers</a></li>
+    <li class='navbar_entry'><a href="{{ url_for('front.faq') }}">fab</a></li>
+    % if current_user.is_authenticated
+    <li class='navbar_entry' style="float:right">{{ current_user.username }}</li>
+    <li class='navbar_entry' style="float:right"><a href="{{ url_for('gallery.add_post') }}" method="post">add a benwa</a></li>
+    <li class='navbar_entry' style="float:right"><a href="{{ url_for('authbp.logout') }}">logout</a></li>
+    % else
+    <li class='navbar_entry' style="float:right"><a href="{{ url_for('authbp.authorize_info') }}">login/signup</a></li>
+    % endif
+</ul>
 {% block body %}{% endblock %}
 </div>
